--- a/style.css
+++ b/style.css
@@ -27,3 +27,26 @@ body {
     padding: 1rem;
     margin: .5rem;
 }
+
+.search-criteria, .sq-foot, .bedrooms, .bathrooms {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.rent-form {
+    width: 350px;
+    height: 450px;
+    margin: auto;
+    position: relative;
+}
+
+.js-compCount, .sq-foot, .bedrooms, .bathrooms {
+    width: 110px;
+    margin: auto;
+}
+
+.rental-search-btn {
+    margin: 3rem;
+}
+
