--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
-  background-color: rgb(160, 207, 140);
+  background-color: rgb(204, 221, 184);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,14 +16,14 @@ body {
 
 .cash-flow-btn {
     font-family: 'Montserrat', sans-serif;
-    background-color: rgb(155, 170, 150);
+    background-color: rgb(254, 255, 253);
     padding: 1rem;
     margin: .5rem;
 }
 
-.search-address-btn, .calculator {
+.search-address-btn {
     font-family: 'Montserrat', sans-serif;
-    background-color: rgb(101, 138, 87);
+    background-color: rgb(255, 255, 255);
     padding: 1rem;
     margin: .5rem;
 }
@@ -36,7 +36,7 @@ body {
 
 .rent-form {
     width: 350px;
-    height: 450px;
+    height: 300px;
     margin: auto;
     position: relative;
 }
@@ -55,4 +55,8 @@ body {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+}
+
+li {
+    list-style-type: none;
 }
