--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
       opacity:1;
 }}
 
-/* MOBILE FIRST */
+/* /////////////////////////////////BASICS//////////////////////////////////// */
 
 * {
   margin: 0;
@@ -87,7 +87,7 @@ header {
     font-style: italic;
 }
 
-/* //////////////////////////////////////////////////////////////////////////// */
+/* ////////////////////////////////////////LOGO//////////////////////////////////// */
 
 .logo {
     display: flex;
@@ -103,7 +103,7 @@ header {
     margin-left: 25px;
 }
 
-/* //////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////NAV////////////////////////////////////////// */
 
 nav {
     display: flex;
@@ -125,7 +125,7 @@ nav {
     text-align: center;
 }
 
-/* //////////////////////////////////////////////////////////////////////////// */
+/* ///////////////////////////////////////INTRO///////////////////////////////////// */
 
 .intro {
     display: flex;
@@ -150,7 +150,7 @@ nav {
     font-family: "Open Sans Condensed", sans-serif;
 }
 
-/* //////////////////////////////////////////////////////////////////////////// */
+/* /////////////////////////////////////INPUT FORMS/////////////////////////////////////// */
 
 .compCriteria {
     display: flex;
@@ -190,7 +190,7 @@ nav {
     border-radius: 5px;
 }
 
-/* //////////////////////////////////////////////////////////////////////////// */
+/* /////////////////////////////////////INPUT CRITERION/////////////////////////////////////// */
 
 #comps-gen {
     padding-top: 10px;
@@ -236,7 +236,7 @@ nav {
 .vacancy p {
     margin: 20px 5px;
 }
-/* //////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////BUTTONS////////////////////////////////////// */
 
 .cash-flow-btn, .rental-search-btn {
     background-color:#adadad;
@@ -253,7 +253,7 @@ nav {
 	text-shadow:0px 1px 0px #757575;
 }
 
-/* //////////////////////////////////////////////////////////////////////////// */
+/* ////////////////////////////////////////RESULTS//////////////////////////////////// */
 
 .results {
     display: flex;
@@ -282,7 +282,7 @@ nav {
     border-radius: 5px;
 }
 
-/* //////////////////////////////////////////////////////////////////////////// */
+/* ////////////////////////////////////MOBILE FIRST//////////////////////////////////////// */
 
 @media all and (min-width: 450px) {
     .intro {
@@ -349,5 +349,5 @@ nav {
     }
     .cash-flow-form {
     margin: 0 200px;
-}
+    }
 }
