--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,900;1,900&family=Montserrat:ital@1&family=Lobster&family=PT+Sans+Caption&family=Poppins:ital,wght@1,600&family=Bebas+Neue&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,900;1,900&family=Montserrat:ital@1&family=Lobster&family=PT+Sans+Caption&family=Poppins:ital,wght@1,600&family=Bebas+Neue&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap");
 
 /*///////////////////////////////FADE IN/////////////////////////////*/
 
@@ -65,7 +65,7 @@
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 header {
